--- a/SampleProject/04_struct/04_structure.csproj
+++ b/SampleProject/04_struct/04_structure.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B97A66E1-149E-4BB0-B6B8-8BFF40027F58}</ProjectGuid>
+    <ProjectGuid>{C96FDE78-1257-40FB-97C3-F77B27F90664}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_03_WebClient</RootNamespace>
-    <AssemblyName>03_WebClient</AssemblyName>
+    <RootNamespace>_04_struct</RootNamespace>
+    <AssemblyName>04_struct</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
