--- a/SampleProject/07_CSharp_7/07_CSharp_7.csproj
+++ b/SampleProject/07_CSharp_7/07_CSharp_7.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B97A66E1-149E-4BB0-B6B8-8BFF40027F58}</ProjectGuid>
+    <ProjectGuid>{AC8FF78A-4BA5-4213-A12A-67F81EC9FC65}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_03_WebClient</RootNamespace>
-    <AssemblyName>03_WebClient</AssemblyName>
+    <RootNamespace>_07_CSharp_7</RootNamespace>
+    <AssemblyName>07_CSharp_7</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
